# squeleton

./: .gitignore  readme.md
ML/: README.md  cookiecutter.json
ML/{{ cookiecutter.project_name }}/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
ML/{{ cookiecutter.project_name }}/app/backend/: main.py
ML/{{ cookiecutter.project_name }}/app/frontend/: app.py  pages_sections.toml
ML/{{ cookiecutter.project_name }}/app/frontend/_pages/: About.py  Home.py  Services.py
ML/{{ cookiecutter.project_name }}/docs/{{ cookiecutter.package_slug }}_docs/: conf.py
ML/{{ cookiecutter.project_name }}/docs/{{ cookiecutter.package_slug }}_docs/docs/source_code/: {{ cookiecutter.package_slug }}.data.rst  {{ cookiecutter.package_slug }}.models.rst  {{ cookiecutter.package_slug }}.rst
ML/{{ cookiecutter.project_name }}/docs/{{ cookiecutter.package_slug }}_docs/docs/usage/: index.rst
ML/{{ cookiecutter.project_name }}/src/: main_analysis.py  main_etl.py  main_script.py
ML/{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_slug }}/data/analysis/: analysis.py
ML/{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_slug }}/data/quality/: correct.py  detect.py
ML/{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_slug }}/features/etl/: extract.py  load.py  transform.py
ML/{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_slug }}/models/autoML/: _supervised.py  _timeseries.py  _unsupervised.py  automl.py
ML/{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_slug }}/utils/: utils.py
fastAPI/: cookiecutter.json
(+107 files in other folders)
