[build-system]
requires = ["setuptools>=68.0.0", "uv>=0.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.package_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "xxxxxxxx@gmail.com" }
]
maintainers = [
    { name = "TnT", email = "tryntry23@gmail.com" }
]
readme = "README.md"
license = { text = "{% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %}" }
keywords = ["python", "TnT", "data-science", "ML"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
homepage = "Code repo URL for your projects"

[project.scripts]
cli_hello_world = "project_name.cli_main_script:hello_world"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }

[tool.setuptools.dynamic]
# for prod
dependencies = { file = ["requirements.txt"] }
# for dev
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

# Configuration optionnelle pour uv (si nécessaire)
[tool.uv]
# Exemple de configuration possible :
resolution = "highest"
